--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,5 @@ jobs:
             cd /home/ubuntu/testingApp
             git pull origin main
             npm install
-            pm2 restart && pm2 log
+            pm2 restart
+            pm2 log
