--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.AWS_HOST }}
-          username: ${{ secrets.AWS_USERNAME }}
+          host: 13.201.166.239
+          username: ubuntu
           key: ${{ secrets.AWS_PRIVATE_KEY }}
+          port: 22
           script: |
-            cd ${{ secrets.APP_DIRECTORY }}
+            cd /home/ubuntu/testing
             git pull origin main
             npm install
             pm2 restart node-app
