--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,6 @@ jobs:
             git pull origin main
             npm install
             pm2 restart node-app
-            pm2 log
+            echo "Fetching latest PM2 logs..."
+            pm2 logs --lines 5
+            pm2 logs --lines 5 &
