--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,6 @@ jobs:
             cd /home/ubuntu/testing
             git pull origin main
             npm install
-            pm2 restart node-app
+            pm2 restart node-app --update-env
             echo "Fetching latest PM2 logs..."
             pm2 logs --lines 5
-            pm2 logs --lines 5 &
